<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFEFE"
    tools:context=".CreateProfile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars"
                android:layout_gravity="center_horizontal"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hapticFeedbackEnabled="false"
                android:text="Take a Profile Pic"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/CPcamerabtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_menu_camera"
                android:onClick="CPcamerabtn" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <EditText
                android:id="@+id/CPemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="ReType Email"
                android:inputType="textEmailAddress" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/CPFname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter First Name"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/CPLname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter Last Name"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/DOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter Date of Birth"
                android:inputType="date" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/CPcity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="City"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/CPstate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="State"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/CPzipcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Zipcode"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/CPbio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="Tell us a little about yourself."
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Select Tags"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/spicyBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="selectItem"
                android:text="@string/Spicy" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <CheckBox
                android:id="@+id/sweetBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="selectItem"
                android:text="@string/Sweet" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <CheckBox
                android:id="@+id/sourBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="selectItem"
                android:text="@string/Sour" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <CheckBox
                android:id="@+id/HealthyBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="selectItem"
                android:text="@string/Healthy" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <CheckBox
                android:id="@+id/seafoodBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="selectItem"
                android:text="@string/Seafood" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <CheckBox
                android:id="@+id/soulBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="selectItem"
                android:text="@string/Soul" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <CheckBox
                android:id="@+id/bitterBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="selectItem"
                android:text="@string/Bitter" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <CheckBox
                android:id="@+id/fusionBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="selectItem"
                android:text="@string/Fusion" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <CheckBox
                android:id="@+id/cajunBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="selectItem"
                android:text="@string/Cajun" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <CheckBox
                android:id="@+id/saltyBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="selectItem"
                android:text="@string/Salty" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <CheckBox
                android:id="@+id/umamiBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="selectItem"
                android:text="@string/Hearty" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <ImageButton
                android:id="@+id/CPsavebtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_menu_save"
                android:onClick="CPsavebtn" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>